--- a/learn-vuex/package.json
+++ b/learn-vuex/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learn-animations-transitions",
+  "name": "vue-first-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.13"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
