--- a/pratice/package.json
+++ b/pratice/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vuex",
+  "name": "pratice",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue-router": "^4.0.0-0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
